# git-actions-playground

./: .release-please-manifest.json  Makefile  README.md  release-please-config.json
.github/workflows/: build-image.yml  release-please.yml  trigger-release.yml
frontend/: CHANGELOG.md  package-lock.json  package.json
frontend/src/: App.css  App.js
python/: CHANGELOG.md  __init__.py  pyproject.toml
python/mypython/: README.md  pyproject.toml
python/mypython/src/mypython/: __init__.py
python/mypython/src/mypython/calc/: calc.py  startup.py
python/src/mypython/: __init__.py
python/src/mypython/module/: calc_module.py
